// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Slideshow/HeroBanner Default 1`] = `
.c4 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 18px;
  line-height: 26px;
  color: inherit;
  margin: 0;
}

.c4 a {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 18px;
  line-height: 26px;
  color: inherit;
}

.c2 {
  margin-top: 0;
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 700;
  font-size: 40px;
  text-transform: uppercase;
  color: inherit;
}

.c0 {
  height: 500px;
  width: 100%;
  position: relative;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-bottom-left-radius: 40px;
}

.c1 {
  position: absolute;
  bottom: 0;
  left: 0;
  z-index: 1;
  width: 600px;
  height: 500px;
  padding: 65px 58px 65px 120px;
  background-color: #6D6E70;
  color: #FFF;
  font-size: 18px;
  overflow: hidden;
  border-bottom-left-radius: 40px;
  border-top-right-radius: 40px;
}

.c3 {
  margin-bottom: 40px;
}

@media screen and (max-width:991px) {
  .c4 {
    font-size: 16px;
  }
}

@media screen and (max-width:767px) {
  .c4 {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {
  .c4 a {
    font-size: 16px;
  }
}

@media screen and (max-width:767px) {
  .c4 a {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {
  .c0 {
    height: 600px;
  }
}

@media screen and (max-width:991px) {
  .c1 {
    width: 400px;
    height: auto;
    min-height: 400px;
    padding: 36px 17px 36px 25px;
  }
}

@media screen and (max-width:767px) {
  .c1 {
    width: 265px;
    padding: 27px 13px 27px 24px;
  }
}

@media screen and (max-width:767px) {
  .c3 {
    margin-bottom: 21px;
  }
}

<div
  className="c0"
>
  <img
    alt=""
    src="https://dummyimage.com/1920x1080/cccccc/ffffff.png"
  />
  <div
    className="c1"
  >
    <h1
      className="c2 c3"
      size="lg"
    >
      Lorem ipsum
    </h1>
    <p
      className="c4"
      size="lg"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
    </p>
  </div>
</div>
`;

exports[`Storyshots Slideshow/HeroBanner With Extra Info 1`] = `
.c4 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.c4 a {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.c8 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 700;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.c8 a {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 700;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.c11 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 18px;
  line-height: 26px;
  color: inherit;
  margin: 0;
}

.c11 a {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 18px;
  line-height: 26px;
  color: inherit;
}

.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 12px;
  width: 12px;
  -webkit-flex: 0 0 12px;
  -ms-flex: 0 0 12px;
  flex: 0 0 12px;
  color: inherit;
}

.c6 > svg {
  height: 100%;
  width: 100%;
  color: inherit;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 26px;
  padding: 6px 14px;
  gap: 5px;
  border-radius: 99px;
  background-color: #c1cfe8;
}

.c5 {
  text-transform: uppercase;
  font-size: 11px;
  line-height: 12px;
  white-space: nowrap;
  color: #252525;
}

.c7 {
  color: #828282;
}

.c13 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: bold;
  border: 0;
  border-radius: 50px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  text-transform: uppercase;
  outline: none !important;
  white-space: nowrap;
  font-size: 16px;
  padding: 0px 32px;
  height: 40px;
  background: transparent;
  color: #FFF;
  border: 1px solid #FFF;
}

.c13:hover {
  color: #6D6E70;
  background-color: #FFF;
}

.c9 {
  margin-top: 0;
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 700;
  font-size: 40px;
  text-transform: uppercase;
  color: inherit;
}

.c0 {
  height: 500px;
  width: 100%;
  position: relative;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-bottom-left-radius: 40px;
}

.c1 {
  position: absolute;
  bottom: 0;
  left: 0;
  z-index: 1;
  width: 600px;
  height: 500px;
  padding: 65px 58px 65px 120px;
  background-color: #6D6E70;
  color: #FFF;
  font-size: 18px;
  overflow: hidden;
  border-bottom-left-radius: 40px;
  border-top-right-radius: 40px;
}

.c10 {
  margin-bottom: 40px;
}

.c2 {
  margin-bottom: 45px;
}

.c12 {
  margin-top: 50px;
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c4 {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c4 a {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c8 {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c8 a {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {
  .c11 {
    font-size: 16px;
  }
}

@media screen and (max-width:767px) {
  .c11 {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {
  .c11 a {
    font-size: 16px;
  }
}

@media screen and (max-width:767px) {
  .c11 a {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {
  .c0 {
    height: 600px;
  }
}

@media screen and (max-width:991px) {
  .c1 {
    width: 400px;
    height: auto;
    min-height: 400px;
    padding: 36px 17px 36px 25px;
  }
}

@media screen and (max-width:767px) {
  .c1 {
    width: 265px;
    padding: 27px 13px 27px 24px;
  }
}

@media screen and (max-width:767px) {
  .c10 {
    margin-bottom: 21px;
  }
}

<div
  className="c0"
>
  <img
    alt=""
    src="https://dummyimage.com/1920x1080/cccccc/ffffff.png"
  />
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <span
          className="c4 c5"
          style={
            Object {
              "textTransform": "uppercase",
            }
          }
        >
          Homepage
        </span>
        <span
          className="c6 c7"
          size="12px"
        >
          <svg
            viewBox="0 0 50 50"
            xmlns="http://www.w3.org/2000/svg"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          >
            <g
              fill="currentColor"
              fillRule="evenodd"
              transform="matrix(-1 0 0 1 37.722 1)"
            >
              <path
                d="M1.768 48c-.26 0-.521-.043-.752-.16-1.134-.578-1.323-1.964-.543-2.807l21.408-20.659L.471 2.965A1.758 1.758 0 0 1 .522.518 1.756 1.756 0 0 1 1.77 0c.446 0 .872.167 1.2.47l22.21 22.56c.729.74.72 1.93-.02 2.657L2.97 47.53c-.324.302-.752.47-1.2.47h-.002Z"
              />
            </g>
          </svg>
        </span>
        <span
          className="c8 c5"
          style={
            Object {
              "textTransform": "uppercase",
            }
          }
        >
          Test page
        </span>
      </div>
    </div>
    <h1
      className="c9 c10"
      size="lg"
    >
      Lorem ipsum
    </h1>
    <p
      className="c11"
      size="lg"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </p>
    <div
      className="c12"
    >
      <button
        className="c13"
        type="button"
      >
        More...
      </button>
    </div>
  </div>
</div>
`;
